# fedora-wsl-setup-playbook

./: .ansible-lint  .gitignore  README.md  README_ja.md  ansible.cfg  playbook.yml  pyproject.toml
host_vars/: fedora.yml  testcontainer.yml
inventories/: hosts.ini  hosts.yml
roles/after_started_systemd/tasks/: create_symlink_wslg.yml  main.yml  npiperelay_socket.yml  podman_socket.yml  set_locale.yml  set_timezone.yml  wslg-symlinks.yml
roles/after_started_systemd/templates/: ssh-agent-npiperelay.socket.j2  ssh-agent-npiperelay@.service.j2  tempfiles.d-wslg.conf.j2  user-tempfiles.d-wslg.conf.j2  wslg-wayland-symlink.service.j2  wslg-x11-symlink.service.j2
roles/after_started_systemd/vars/: main.yml
roles/initial_setup/handlers/: main.yml
roles/initial_setup/tasks/: edit_wsl_conf.yml  install_packages.yml  main.yml  prerequire.yml
roles/initial_setup/vars/: main.yml
roles/user_setup/files/: append-bashrc.sh
roles/user_setup/tasks/: add_alias.yml  configure_git.yml  configure_mounts.yml  create.yml  customize_bashrc.yml  edit_wsl_conf.yml  install_compose.yml  install_npiperelay.yml  install_pyenv.yml  install_quarkuscli.yml  install_rye.yml  install_uv.yml  main.yml
roles/user_setup/templates/: alias.sh.j2
roles/user_setup/vars/: main.yml
