[project]
name = "fedora-wsl-setup-playbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = []

[tool.uv]
environments = ["platform_system != 'Windows'", "platform_system == 'Windows'"]

[dependency-groups]
dev = [
    "ansible>=11.1.0",
    "ansible-lint>=6.8.7",
    "passlib"
]
